--- a/pages/globals.css
+++ b/pages/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body > div > aside {
+  
+  padding-top: constant(safe-area-inset-top) !important;
+  padding-top: env(safe-area-inset-top) !important;
+}
+
 ul,
 ol,
 li {
